[package]
name = "libffi-sys"
version = "0.4.6"
authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
links = "ffi"
build = "build.rs"
description = "Raw Rust bindings for libffi"
repository = "https://github.com/tov/libffi-sys-rs"
homepage = "https://github.com/tov/libffi-sys-rs"
documentation = "http://tov.github.io/libffi-rs/"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["ffi", "libffi", "closure", "c"]

[dependencies]

[build-dependencies]
bindgen = "0.18"
make-cmd = "0.1"
